// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createElement can pass ES Module output object 1`] = `
Object {
  "children": Array [
    "hello world",
  ],
  "tagName": "VIEW",
}
`;

exports[`createElement can receive three args 1`] = `
Object {
  "attributes": Object {
    "arr": Array [
      0,
      1,
      2,
    ],
    "color": "red",
  },
  "children": Array [
    "hello world",
  ],
  "tagName": "VIEW",
}
`;

exports[`createElement can receive two args 1`] = `
Object {
  "children": Array [
    "hello world",
  ],
  "tagName": "VIEW",
}
`;

exports[`createElement supports template for MiniApp 1`] = `
Object {
  "tagName": "VIEW",
}
`;
